config/cmr/test_cmr/backend/static/css/fiche_individu_template_pdf.css
@page {
    size: 29.7cm 21.0cm !important;
    margin: 2.5cm 0.5cm 0.3cm 0.5cm !important;
}
* {
    font-family: Verdana, sans-serif !important;
}
body {
    font-size: 11px;
}
.italic {
    font-style: italic;
}
div.header {
    position: fixed;
    top: -2.1cm;
    color: #578799;
}
div.footer {
    position: fixed;
    bottom: 10px;
    width: 99%;
    display: flex;
    justify-content: space-between;
}
h1 {
    font-style: italic;
    margin-top: 0px;
}

h1, h2 {
    color: #00B0F0;
}
h3 {
    color: #0070C0;
}

strong, th {
    color: #578799;
}
.analyses strong {
    color: black;
}

table.bordered {
    border-collapse: collapse;
}
table.bordered th,
table.bordered td {
    border: solid 1px black;
    padding: 4px 4px;
}
.analyses-container {
    display: flex;
}
.analyses {
    border: solid 1px black;
    border-radius: 3px;
    padding: 10px;
    margin-right: 20px;
    background-color: #DFEFF6;
}

